# llama-server

./: Dockerfile  README.md  compose.yaml  model.py  pyproject.toml
.devcontainer/: dev-compose.yaml  devcontainer.json
