[tool.poetry]
name = "llamafile"
version = "0.1.0"
description = ""
authors = ["apires <piresa1999@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.3.1"
transformers = "^4.42.3"
ipython = "^8.26.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
