[tool.poetry]
name = "llamafile"
version = "0.1.0"
description = ""
authors = ["apires <piresa1999@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.3.1"
transformers = "^4.42.3"
ipython = "^8.26.0"
flask = "^3.0.3"
accelerate = "^0.31.0"
torchvision = "^0.18.1"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
